# langgraph-page-builder

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: architecture.md  usage.md
eval_server/: .gitignore
eval_server/backend/: server.py
eval_server/backend/data_providers/: __init__.py  registry.py  router.py  types.py  utils.py
eval_server/backend/eval_metrics_adapter/: __init__.py  _common.py  eval_adapter.py  feedback_adapter.py  metrics_adapter.py
eval_server/backend/routers/: __init__.py  business.py  checkpoints.py  common.py  curated_pages.py  eval.py  feedback.py  health.py  metrics.py  prompt_traces.py  section_repo.py  task_config.py
eval_server/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
eval_server/frontend/code_editor/: CodeEditor.jsx  DiffViewer.tsx  PreviewContext.jsx  TwoPanelLayout.jsx  Viewer.jsx  index.js
eval_server/frontend/html_preview/: HtmlPreview.tsx  StreamedPreview.tsx  common_css_js_imports.tsx  dummyHtml.ts  functionality_connector.ts  functionality_connector_bridge.tsx  useCompiledHtml.ts
eval_server/frontend/src/: App.jsx  main.jsx  styles.css
pipeline/: __init__.py  env_utils.py  pipeline_helpers.py  user_website_input_choices.py
pipeline/landing_page_demos/: README.md  __init__.py  add_section_and_regenerate_demo.py  create_non_homepage_demo.py  delete_section_demo.py  landing_page_demo.py  partial_autopop_demo.py  preset_sections_demo.py  template_selection_demo.py  utils.py
scripts/evals/: _real_data_common.py  run_color_palette_sample.py  run_curated_pages_sample.py  run_landing_page_sample.py  run_section_coverage_sample.py  run_template_selection_sample.py
scripts/metrics/: _common.py  compute_metrics.py  verify_metrics.py
tests/evals/checkpoints/: test_extractors.py  (+2 more)
wwai_agent_orchestration/constants/: preset_templates.py  prompt_trace.py  prompt_versions.py  section_types.py
wwai_agent_orchestration/core/: workflow_background_runner.py
wwai_agent_orchestration/data/: DATA_LAYER.md  __init__.py
wwai_agent_orchestration/evals/: __init__.py  __main__.py  cli.py  entrypoints.py
wwai_agent_orchestration/middleware/: streaming_middleware.py
wwai_agent_orchestration/nodes/: base.py
wwai_agent_orchestration/prompt_builder/: prompt_builder.py  prompt_builder_dataclass.py
wwai_agent_orchestration/scraper/: runner.py
(+511 files in other folders)
